--- a/www/index.html
+++ b/www/index.html
@@ -17,14 +17,19 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/camera.js"></script>
+    <script src="js/new-controller.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="recollect" ng-controller="NewCtrl">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content padding=true>
+        <button ng-click="getPhoto()" class="button button-block button-positive">Take Photo</button>
+        <img ng-src="{{ lastPhoto }}" style="max-width: 100%">
+        <p>{{ lastPhoto }}</p>
       </ion-content>
     </ion-pane>
   </body>
