--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="recollect">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <meta name="author" content="Arshan Alam" />
+    <meta name="author" content="David Song" />
 
+    <title ng-controller="titleCtl">{{ title }}</title>
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -18,14 +20,14 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <body>
+      <ion-nav-view></ion-nav-view>
   </body>
+
+    <!-- Scripts Include -->
+  <script type="text/javascript" src="js/state.js"></script>
+  <script type="text/javascript" src="js/title.js"></script>
+  <script type="text/javascript" src="js/menu.js"></script>
+  <!-- End Scripts Include -->
+
 </html>
