--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="js/app.js"></script>
     <script src="js/camera.js"></script>
     <script src="js/new-controller.js"></script>
+    <script src="js/local-storage.js"></script>
   </head>
   <body>
       <ion-nav-view></ion-nav-view>
