--- a/www/index.html
+++ b/www/index.html
@@ -1,50 +1,37 @@
 <!DOCTYPE html>
 <html ng-app="recollect">
+
   <head>
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="author" content="Arshan Alam" />
     <meta name="author" content="David Song" />
 
+    <!-- Title -->
     <title ng-controller="titleCtl">{{ title }}</title>
 
-    <!-- compiled css output -->
+    <!-- Libraries -->
     <link href="css/ionic.app.css" rel="stylesheet">
-
-    <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/camera.js"></script>
-    <script src="js/new-controller.js"></script>
-    <script src="js/local-storage.js"></script>
   </head>
-  <body>
-      <ion-nav-view></ion-nav-view>
-      <!--
-  <body ng-app="recollect" ng-controller="NewCtrl">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content padding=true>
-        <button ng-click="getPhoto()" class="button button-block button-positive">Take Photo</button>
-        <img ng-src="{{ lastPhoto }}" style="max-width: 100%">
-        <p>{{ lastPhoto }}</p>
-      </ion-content>
-    </ion-pane>
-    -->
+
+  <body>
+
+    <ion-nav-view></ion-nav-view>
+
   </body>
 
-    <!-- Scripts Include -->
-  <script type="text/javascript" src="js/state.js"></script>
-  <script type="text/javascript" src="js/title.js"></script>
-  <script type="text/javascript" src="js/menu.js"></script>
-  <!-- End Scripts Include -->
+  <!-- Scripts -->
+  <script src="js/camera.js"></script>
+  <script src="js/local-storage.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/state.js"></script>
+  <script src="js/title.js"></script>
+  <script src="js/menu.js"></script>
+  <script src="js/new-controller.js"></script>
 
 </html>
