--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <link href='https://fonts.googleapis.com/css?family=Marcellus+SC|Tangerine|Open+Sans' rel='stylesheet' type='text/css'>
     <meta name="author" content="Arshan Alam" />
     <meta name="author" content="David Song" />
 
@@ -10,6 +11,8 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -24,26 +27,16 @@
   </head>
   <body>
       <ion-nav-view></ion-nav-view>
-      <!--
-  <body ng-app="recollect" ng-controller="NewCtrl">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content padding=true>
-        <button ng-click="getPhoto()" class="button button-block button-positive">Take Photo</button>
-        <img ng-src="{{ lastPhoto }}" style="max-width: 100%">
-        <p>{{ lastPhoto }}</p>
-      </ion-content>
-    </ion-pane>
-    -->
   </body>
 
+
+
     <!-- Scripts Include -->
+  <script type="text/javascript" src="lib/jQuery/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/state.js"></script>
   <script type="text/javascript" src="js/title.js"></script>
   <script type="text/javascript" src="js/menu.js"></script>
+  <script type="text/javascript" src="js/slideshow.js"></script>
   <!-- End Scripts Include -->
 
 </html>
