--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
   <!-- Scripts -->
   <script src="js/camera.js"></script>
   <script src="js/local-storage.js"></script>
+  <script src="js/interval.js"></script>
   <script src="js/app.js"></script>
   <script src="js/state.js"></script>
   <script src="js/title.js"></script>
