added facebook integration

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <!-- Libraries -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
+    <script src="js/openfb.js"></script>
+    <script src="js/ngopenfb.js"></script>
 
   </head>
 
@@ -37,5 +39,6 @@
   <script src="js/menu.js"></script>
   <script src="js/new-controller.js"></script>
   <script src="js/slideshow.js"></script>
+  <script src="js/settings.js"></script>
 
 </html>
